* Simplify the `RE_BUGGY_QSAPI` regexp and allow FF to use Array.slice() in concatList(). [jddalton]

* Rename `reSimpleSelector` to `RE_SIMPLE_SELECTOR` and fork to optimize the regexp for IE. [jddalton]

* Remove the `data` argument from NW.Dom.select() because the same functionality can be achieved by the `callback` argument. [jddalton]

* Tweak the `reUnnormalized` regexp and make `RE_BUGGY_MUTATION` match `:disabled` and `:checked`. [jddalton]

* Make match() only process elements that have a `ownerDocument` property to avoid the document object. [jddalton]

* Expose NW.Dom.normalize() for testing purposes and ensure NW.Dom.compile() normalizes the selector. [jddalton]

* Make `reUnNormalized` more procise and ensure client_api() doesn't pave the `data` argument in Firefox. [jddalton]

* unit test: Update Prototype and jQuery unit tests. [jddalton]

* Optimize getChildren() by using a do-while loop instead of a while loop. [jddalton]

* Ensure byClass() coerces element.className to a string before attempting indexOf() because SVG elements have a non-string value for `className`. [jddalton]

* Ensure normalize() performs a quote safe approach if a selector contains `[` or `(`. [jddalton]

* Only normalize selectors that contain edge case whitespace like \t, \n , \r, \f and consecutive spaces. [jddalton]

* Reorganize the definition order of some of the feature test flags. [jddalton]

* Make compileSelector() handle attribute case sensitivity properly. [jddalton]

* Make INSENSITIVE_TABLE defined by feature test instead of docType sniff because many pages are sent with the wrong mime type causing XHTML to be processed as invalid HTML. [jddalton]

* Make client_api() cache empty results. [jddalton]

* Enable dom result caching by fixing how mutation event bugs are handled and rename `BUGGY_QSAPI` to `RE_BUGGY_QSAPI`. [jddalton]

* Optimize client_api() cached performance when passing a callback. [jddalton]

* Optimize client_api() compiled/dom caching. [jddalton]